# serializer version: 1
# name: TestBodyFiltering.test_body_rising_during_block_excluded
  dict({
    'image_hash': 'd75b24a802ecff32ee49e96060008a6d81b0113ea1ec05d1630bcc85eb4580ee',
    'image_size_bytes': 147736,
    'jupiter_excluded': True,
    'saturn_included': True,
    'targets_in_chart': list([
      'Saturn',
    ]),
  })
# ---
# name: TestBodyFiltering.test_body_setting_during_block_excluded
  dict({
    'image_hash': '881b5e10c3b3d91d9c97675c474b8a43f7dd01e0c99291628d210dd161493a7e',
    'image_size_bytes': 147811,
    'jupiter_included': True,
    'moon_excluded': True,
    'targets_in_chart': list([
      'Jupiter',
    ]),
  })
# ---
# name: TestBodyFiltering.test_chart_title_with_location_and_date
  dict({
    'date': 'November 24, 2025',
    'has_date': True,
    'has_location': True,
    'image_hash': 'b14fb107b80941ff8658813ecb2dde8aa70f53a7415efbd40a19f772e72104ee',
    'image_size_bytes': 154622,
    'location': 'Orlando',
  })
# ---
# name: TestBodyFiltering.test_no_yellow_in_colormap
  dict({
    'altitude_degrees': 70,
    'high_altitude_test': True,
    'image_hash': '6b5cda7a651ceeab60def05285189e491eba5e30da5c2ae985fb36ac3689bc90',
    'image_size_bytes': 142182,
  })
# ---
# name: TestBodyFiltering.test_non_aligned_time_window
  dict({
    'first_tick_expected_after_start': True,
    'image_hash': '0be0ac2ef2638af74dc112f1d0b478496561fe988396d2fb05ba1fb8bab7cbda',
    'image_size_bytes': 143985,
    'start_time': '05:00 PM',
  })
# ---
# name: TestBodyFiltering.test_single_body_poor_visibility
  dict({
    'has_warning': True,
    'image_hash': '7cf3cbafcd66084a0f06d412bc9b6079e91ad5132e9ac18ff8de8e66dcfa0f32',
    'image_size_bytes': 158267,
    'targets': list([
      'Mars',
    ]),
  })
# ---
# name: TestEdgeCases.test_insufficient_continuous_hours
  dict({
    'longest_continuous_block': 1,
    'meets_1hr_minimum': True,
    'meets_2hr_minimum': False,
    'total_visible_hours': 3,
  })
# ---
# name: TestEdgeCases.test_no_bodies_visible
  dict({
    'bodies_meeting_requirement': dict({
    }),
    'has_visible_bodies': False,
    'total_slots': 1,
  })
# ---
# name: TestFloodFillAndPartialVisibility.test_altitude_dots_not_duplicated_at_edges
  dict({
    'all_altitudes_unique': True,
    'altitude_pattern': list([
      60,
      55,
      50,
      45,
      40,
      35,
      30,
      25,
      20,
      15,
      10,
    ]),
    'end_time': '11:30 PM',
    'first_altitude': 60,
    'image_hash': 'f5da8cdce447add777a38e6c82d8ec21ce9c29f784fc99658d451a800ea8b295',
    'image_size_bytes': 159955,
    'last_altitude': 10,
    'start_time': '09:00 PM',
  })
# ---
# name: TestFloodFillAndPartialVisibility.test_chart_only_shows_best_block_times
  dict({
    'duration_slots': 9,
    'end_time': '12:00 AM',
    'image_hash': '605a4646618ba83109e7767d0a4887b83483a525c5f6da2a821904d9c62eaaa9',
    'image_size_bytes': 138689,
    'start_time': '10:00 PM',
    'targets': list([
      'Moon',
      'Jupiter',
    ]),
  })
# ---
# name: TestFloodFillAndPartialVisibility.test_expanded_block_with_mixed_weather
  dict({
    'chart_slots': 17,
    'image_hash': '219b8e6a00a025b4a64b3cd29c4b732fa8385c1e6b7cf5888177b6a7023b8086',
    'image_size_bytes': 154219,
    'targets': list([
      'Moon',
      'Mars',
      'Jupiter',
    ]),
    'total_night_slots': 24,
  })
# ---
# name: TestFloodFillAndPartialVisibility.test_partial_body_overlap_included_in_chart
  dict({
    'image_hash': '42c7bf2a27f5b778c0dfae49aeadbe69babe0896576e16cda2e3f432ae02129b',
    'image_size_bytes': 150439,
    'jupiter_visible_slots': 16,
    'saturn_visible_slots': 8,
    'targets': list([
      'Jupiter',
      'Saturn',
    ]),
    'total_slots': 16,
  })
# ---
# name: TestNotificationScenarios.test_ascii_chart_generation
  '''
  Time      Moon     Mars     Jupiter  Saturn  
  ----------------------------------------------
  09:00 PM ▓▓▓▓              ▓▓▓▓              
  10:00 PM ▓▓▓▓     ░░░░     ▓▓▓▓              
  11:00 PM ▓▓▓▓     ▓▓▓▓     ▓▓▓▓     ░░░░     
  '''
# ---
# name: TestNotificationScenarios.test_mixed_conditions_partial_visibility
  dict({
    'continuous_blocks': dict({
      'Jupiter': 32,
      'Mars': 32,
      'Moon': 32,
      'Saturn': 25,
    }),
    'image_hash': '446b454a2552f1a3fda1b8b54221f2c97a18ba4dbfa5e6f0e46c5adcc360f3e5',
    'image_size_bytes': 172647,
    'times': list([
      '2025-11-24 08:00 PM',
      '2025-11-24 08:15 PM',
      '2025-11-24 08:30 PM',
      '2025-11-24 08:45 PM',
      '2025-11-24 09:00 PM',
      '2025-11-24 09:15 PM',
      '2025-11-24 09:30 PM',
      '2025-11-24 09:45 PM',
      '2025-11-24 10:00 PM',
      '2025-11-24 10:15 PM',
      '2025-11-24 10:30 PM',
      '2025-11-24 10:45 PM',
      '2025-11-24 11:00 PM',
      '2025-11-24 11:15 PM',
      '2025-11-24 11:30 PM',
      '2025-11-24 11:45 PM',
      '2025-11-25 12:00 AM',
      '2025-11-25 12:15 AM',
      '2025-11-25 12:30 AM',
      '2025-11-25 12:45 AM',
      '2025-11-25 01:00 AM',
      '2025-11-25 01:15 AM',
      '2025-11-25 01:30 AM',
      '2025-11-25 01:45 AM',
      '2025-11-25 02:00 AM',
      '2025-11-25 02:15 AM',
      '2025-11-25 02:30 AM',
      '2025-11-25 02:45 AM',
      '2025-11-25 03:00 AM',
      '2025-11-25 03:15 AM',
      '2025-11-25 03:30 AM',
      '2025-11-25 03:45 AM',
      '2025-11-25 04:00 AM',
    ]),
    'visibility_summary': dict({
      '01:00 AM': 4,
      '01:15 AM': 4,
      '01:30 AM': 4,
      '01:45 AM': 4,
      '02:00 AM': 4,
      '02:15 AM': 4,
      '02:30 AM': 4,
      '02:45 AM': 4,
      '03:00 AM': 4,
      '03:15 AM': 4,
      '03:30 AM': 4,
      '03:45 AM': 4,
      '04:00 AM': 0,
      '08:00 PM': 3,
      '08:15 PM': 3,
      '08:30 PM': 3,
      '08:45 PM': 3,
      '09:00 PM': 3,
      '09:15 PM': 3,
      '09:30 PM': 3,
      '09:45 PM': 4,
      '10:00 PM': 4,
      '10:15 PM': 4,
      '10:30 PM': 4,
      '10:45 PM': 4,
      '11:00 PM': 4,
      '11:15 PM': 4,
      '11:30 PM': 4,
      '11:45 PM': 4,
      '12:00 AM': 4,
      '12:15 AM': 4,
      '12:30 AM': 4,
      '12:45 AM': 4,
    }),
  })
# ---
# name: TestNotificationScenarios.test_notification_message_formatting
  '''
  🌙 Clear Skies Alert! 🌙
  Best Block: 09:00 PM-01:00 AM (4h, up to 3 bodies)
  Weather: Cloud<15.0%, Precip<5.0%
  
  Moon: 09:00 PM-01:00 AM | >15° 09:00 PM-01:00 AM
  Jupiter: 08:00 PM-02:00 AM | >15° 08:00 PM-02:00 AM
  Mars: 10:00 PM-02:00 AM
  '''
# ---
# name: TestNotificationScenarios.test_perfect_conditions_all_bodies_visible
  dict({
    'body_summary': dict({
      'Jupiter': dict({
        'altitudes': list([
          40.0,
          40.5,
          41.0,
          41.5,
          42.0,
          42.75,
          43.5,
          44.25,
          45.0,
          45.5,
          46.0,
          46.5,
          47.0,
          46.5,
          46.0,
          45.5,
          45.0,
          44.25,
          43.5,
          42.75,
          42.0,
          41.0,
          40.0,
          39.0,
          38.0,
        ]),
        'high_altitude_hours': 25,
        'total_visible_hours': 25,
      }),
      'Mars': dict({
        'altitudes': list([
          5.0,
          5.75,
          6.5,
          7.25,
          8.0,
          9.0,
          10.0,
          11.0,
          12.0,
          12.75,
          13.5,
          14.25,
          15.0,
          15.75,
          16.5,
          17.25,
          18.0,
          18.5,
          19.0,
          19.5,
          20.0,
          19.5,
          19.0,
          18.5,
          18.0,
        ]),
        'high_altitude_hours': 13,
        'total_visible_hours': 25,
      }),
      'Moon': dict({
        'altitudes': list([
          25.0,
          26.25,
          27.5,
          28.75,
          30.0,
          31.25,
          32.5,
          33.75,
          35.0,
          36.25,
          37.5,
          38.75,
          40.0,
          39.5,
          39.0,
          38.5,
          38.0,
          37.25,
          36.5,
          35.75,
          35.0,
          33.75,
          32.5,
          31.25,
          30.0,
        ]),
        'high_altitude_hours': 25,
        'total_visible_hours': 25,
      }),
      'Saturn': dict({
        'altitudes': list([
          0.75,
          2.0,
          2.75,
          3.5,
          4.25,
          5.0,
          5.75,
          6.5,
          7.25,
          8.0,
          8.5,
          9.0,
          9.5,
          10.0,
          9.5,
          9.0,
          8.5,
          8.0,
        ]),
        'high_altitude_hours': 0,
        'total_visible_hours': 18,
      }),
    }),
    'image_hash': '13176a38be412c1dfd216def45803dd8d31e9972f3630fe9a8de844ac24b8354',
    'image_size_bytes': 147863,
    'times': list([
      '2025-11-24 08:00 PM',
      '2025-11-24 08:15 PM',
      '2025-11-24 08:30 PM',
      '2025-11-24 08:45 PM',
      '2025-11-24 09:00 PM',
      '2025-11-24 09:15 PM',
      '2025-11-24 09:30 PM',
      '2025-11-24 09:45 PM',
      '2025-11-24 10:00 PM',
      '2025-11-24 10:15 PM',
      '2025-11-24 10:30 PM',
      '2025-11-24 10:45 PM',
      '2025-11-24 11:00 PM',
      '2025-11-24 11:15 PM',
      '2025-11-24 11:30 PM',
      '2025-11-24 11:45 PM',
      '2025-11-25 12:00 AM',
      '2025-11-25 12:15 AM',
      '2025-11-25 12:30 AM',
      '2025-11-25 12:45 AM',
      '2025-11-25 01:00 AM',
      '2025-11-25 01:15 AM',
      '2025-11-25 01:30 AM',
      '2025-11-25 01:45 AM',
      '2025-11-25 02:00 AM',
    ]),
    'visibility_grid': dict({
      '01:00 AM': dict({
        'bodies': list([
          'Moon',
          'Mars',
          'Jupiter',
          'Saturn',
        ]),
        'count': 4,
      }),
      '01:15 AM': dict({
        'bodies': list([
          'Moon',
          'Mars',
          'Jupiter',
          'Saturn',
        ]),
        'count': 4,
      }),
      '01:30 AM': dict({
        'bodies': list([
          'Moon',
          'Mars',
          'Jupiter',
          'Saturn',
        ]),
        'count': 4,
      }),
      '01:45 AM': dict({
        'bodies': list([
          'Moon',
          'Mars',
          'Jupiter',
          'Saturn',
        ]),
        'count': 4,
      }),
      '02:00 AM': dict({
        'bodies': list([
          'Moon',
          'Mars',
          'Jupiter',
          'Saturn',
        ]),
        'count': 4,
      }),
      '08:00 PM': dict({
        'bodies': list([
          'Moon',
          'Mars',
          'Jupiter',
        ]),
        'count': 3,
      }),
      '08:15 PM': dict({
        'bodies': list([
          'Moon',
          'Mars',
          'Jupiter',
        ]),
        'count': 3,
      }),
      '08:30 PM': dict({
        'bodies': list([
          'Moon',
          'Mars',
          'Jupiter',
        ]),
        'count': 3,
      }),
      '08:45 PM': dict({
        'bodies': list([
          'Moon',
          'Mars',
          'Jupiter',
        ]),
        'count': 3,
      }),
      '09:00 PM': dict({
        'bodies': list([
          'Moon',
          'Mars',
          'Jupiter',
        ]),
        'count': 3,
      }),
      '09:15 PM': dict({
        'bodies': list([
          'Moon',
          'Mars',
          'Jupiter',
        ]),
        'count': 3,
      }),
      '09:30 PM': dict({
        'bodies': list([
          'Moon',
          'Mars',
          'Jupiter',
        ]),
        'count': 3,
      }),
      '09:45 PM': dict({
        'bodies': list([
          'Moon',
          'Mars',
          'Jupiter',
          'Saturn',
        ]),
        'count': 4,
      }),
      '10:00 PM': dict({
        'bodies': list([
          'Moon',
          'Mars',
          'Jupiter',
          'Saturn',
        ]),
        'count': 4,
      }),
      '10:15 PM': dict({
        'bodies': list([
          'Moon',
          'Mars',
          'Jupiter',
          'Saturn',
        ]),
        'count': 4,
      }),
      '10:30 PM': dict({
        'bodies': list([
          'Moon',
          'Mars',
          'Jupiter',
          'Saturn',
        ]),
        'count': 4,
      }),
      '10:45 PM': dict({
        'bodies': list([
          'Moon',
          'Mars',
          'Jupiter',
          'Saturn',
        ]),
        'count': 4,
      }),
      '11:00 PM': dict({
        'bodies': list([
          'Moon',
          'Mars',
          'Jupiter',
          'Saturn',
        ]),
        'count': 4,
      }),
      '11:15 PM': dict({
        'bodies': list([
          'Moon',
          'Mars',
          'Jupiter',
          'Saturn',
        ]),
        'count': 4,
      }),
      '11:30 PM': dict({
        'bodies': list([
          'Moon',
          'Mars',
          'Jupiter',
          'Saturn',
        ]),
        'count': 4,
      }),
      '11:45 PM': dict({
        'bodies': list([
          'Moon',
          'Mars',
          'Jupiter',
          'Saturn',
        ]),
        'count': 4,
      }),
      '12:00 AM': dict({
        'bodies': list([
          'Moon',
          'Mars',
          'Jupiter',
          'Saturn',
        ]),
        'count': 4,
      }),
      '12:15 AM': dict({
        'bodies': list([
          'Moon',
          'Mars',
          'Jupiter',
          'Saturn',
        ]),
        'count': 4,
      }),
      '12:30 AM': dict({
        'bodies': list([
          'Moon',
          'Mars',
          'Jupiter',
          'Saturn',
        ]),
        'count': 4,
      }),
      '12:45 AM': dict({
        'bodies': list([
          'Moon',
          'Mars',
          'Jupiter',
          'Saturn',
        ]),
        'count': 4,
      }),
    }),
  })
# ---
